<resources>
    <string name="app_name">Survey Application</string>
    <string name="phone_number">Phone Number</string>
    <string name="pin">Pin</string>
    <string name="new_to_the_app_register_now">New to the app? Register Now.</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="next">Next</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_residents_info_collection">Residents Info Collection</string>
    <string name="serial_no">Serial No</string>
    <string name="name_of_person">Name of Person</string>
    <string name="father_husband_name">Father/Husband Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="residential_address">Residential Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age_in_years">Age in years</string>
    <string name="children">Children</string>
    <string name="submit">Submit</string>
    <string name="menu_nav_residents_list">Residents List</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_resident_details">Resident Detail</string>
    <string name="menu_survey_locality">Survey Locality Collection</string>
    <string name="karachi">Karachi</string>
    <string name="lahore">Lahore</string>
</resources>