<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="8dp"
        tools:context=".ui.residents.ResidentsInfoCollectionFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_serial_no"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/serial_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_serial_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name_of_person"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name_of_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_of_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_father_husband_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/father_husband_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_father_husband_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mother_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mother_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mother_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_residential_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/residential_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_residential_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:maxLength="11" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="1.2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_date_of_birth"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:enabled="false"
                        android:inputType="text"
                        android:digits="0123456789" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_select_date"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:src="@drawable/ic_calendar"
                    android:backgroundTint="@color/purple_500"
                    app:tint="@color/white"
                    android:contentDescription="@string/app_name"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_age_in_years"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/age_in_years">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_age_in_years"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:maxLength="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_border_bg">

                <Spinner
                    android:id="@+id/spn_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_marital_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_border_bg">

                <Spinner
                    android:id="@+id/spn_marital_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_border_bg">

                <Spinner
                    android:id="@+id/spn_education"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_border_bg">

                <Spinner
                    android:id="@+id/spn_occupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_children"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:hint="@string/children">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_children"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_pregnant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:background="@drawable/gray_border_bg">

                <Spinner
                    android:id="@+id/spn_pregnant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/submit"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</layout>